--- a/main.html
+++ b/main.html
@@ -7,6 +7,43 @@
 </head>
 
 <body>
+	<main>
+		<form method="post">
+			<label for="name">Name*</label>
+			<input id="name" required type="text"/>
+			<br>
+			<label for="email">Email*</label>
+			<input type="email" id="email" required/>
+			<br>
+			<label  for="gender">Gender*</label>
+				<input type="radio"  name="gender" required/>Male
+				<input type="radio"  name="gender" required/>Female
+			<br>
+			<label for="cars">Car Brands</label>
+				<select id="cars">
+					<option>BMW</option>
+					<option>Audi</option>
+					<option>Mercedez</option>
+				</select>
+			<br>
+			<label for="carage">Car Age*</label>
+			<input type="text" id="carage" required/>
+			<br>
+			<label for="dop">Date of Purchase(dop)*</label>
+			<input type="date" id="dop" required/>
+
+			<br>
+			<label for="password">Password*</label>
+			<input type="password"id="password" required/>
+
+			<br>
+			<label for="button"></label>
+			<button type="submit" id="button">submit button</button>
+			
+			
+			
+		</form>
+	</main>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
